# document-anonymizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: german-pii-patterns.md  security.md
scripts/: check_security.sh  generate_test_documents.py  smoke_test.py
src/document_anonymizer/: __init__.py  constants.py  health.py
src/document_anonymizer/anonymization/: engine.py  operators.py  strategies.py
src/document_anonymizer/api/: __init__.py  app.py  dependencies.py  router.py  schemas.py
src/document_anonymizer/audit/: logging.py
src/document_anonymizer/detection/: engine.py
src/document_anonymizer/detection/recognizers/: __init__.py  german_address.py  german_date.py  german_handelsreg.py  german_iban.py  german_id_card.py  german_phone.py  german_tax.py
src/document_anonymizer/document/: pdf_handler.py  processor.py  text_handler.py
src/document_anonymizer/i18n/: __init__.py
src/document_anonymizer/i18n/translations/: de.json  en.json
src/document_anonymizer/security/: middleware.py  rate_limiter.py  validation.py
src/document_anonymizer/web/: routes.py
src/document_anonymizer/web/static/css/: app.css
src/document_anonymizer/web/static/js/: app.js  i18n.js  review.js
src/document_anonymizer/web/templates/: anonymized.html  base.html  error_fragment.html  index.html  results.html
tests/: conftest.py  test_api_endpoints.py  test_document_anonymizer.py  test_health.py
tests/e2e/: test_pdf_redaction.py
tests/integration/: test_api.py  test_health.py
tests/property/: test_properties.py
tests/test_anonymization/: test_engine.py  test_operators.py
tests/test_api/: test_app_lifespan.py
tests/test_detection/: test_german_address.py  test_german_date.py  test_german_handelsreg.py  test_german_iban.py  test_german_id_card.py  test_german_phone.py  test_german_tax.py
tests/test_document/: test_pdf_handler.py  test_pdf_redact_with_entities.py  test_processor.py  test_text_handler.py
tests/test_i18n/: test_translations.py
tests/test_security/: test_middleware.py  test_rate_limiter.py  test_validation.py
tests/test_web/: test_highlighted_text.py  test_i18n_integration.py  test_review_helpers.py  test_review_routes.py  test_routes.py
